--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "url": "https://github.com/teddykwon/react-native-video-stream/issues"
   },
   "homepage": "https://github.com/teddykwon/react-native-video-stream#readme",
+  "dependencies": {
+    "prop-types": "^15.6.0"
+  },
   "devDependencies": {
     "react": "~15.4.0",
     "react-native": "~0.40.0"
